--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,32 +1,33 @@
 /*
  * General styles
  */
- body, html {
-    background-image: "#fff";
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: $fontmain;
-    font-size: $base-size - 2px;
-    height: 100vh;
-    overflow: hidden;
+body,
+html {
+  background-image: "#fff";
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: $fontmain;
+  font-size: $base-size - 2px;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .btn {
-    padding: 0;
-    border: none;
-    cursor: pointer;
-    font-weight: 700;
-    height: 30px;
-    line-height: 30px;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-    i {
-      font-size: $base-size - 3px;
-    }
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  height: 30px;
+  line-height: 30px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  i {
+    font-size: $base-size - 3px;
+  }
 }
 
-.btn-edit, 
+.btn-edit,
 .btn-add,
 .btn-delete,
 .btn-assign {
@@ -59,7 +60,7 @@
 #password::-ms-input-placeholder {
   font-family: $fontmain; // EDGE 2
 }
-#password::placeholder { 
+#password::placeholder {
   font-family: $fontmain;
 }
 
@@ -79,28 +80,28 @@
   }
 }
 
-.modal {
-  .modal-dialog {
-    .modal-content {
-      .modal-header {
-        padding: 0 10px;
-        height: 35px;
-        background-color: $colormain;
-        color: $common-text-color;
-        .modal-title {
-          line-height: 35px;
-          font-weight: 500;
-          font-size: $base-size + 1px;
-        }
-        .btn-close {
-          position: absolute;
-          color: $common-text-color;
-          i {
-            line-height: 35px;
-            font-size: $base-size + 2px;
-          }
-        }
-      }
-    }
-  }
-}
+// .modal {
+//   .modal-dialog {
+//     .modal-content {
+//       .modal-header {
+//         padding: 0 10px;
+//         height: 35px;
+//         background-color: $colormain;
+//         color: $common-text-color;
+//         .modal-title {
+//           line-height: 35px;
+//           font-weight: 500;
+//           font-size: $base-size + 1px;
+//         }
+//         .btn-close {
+//           position: absolute;
+//           color: $common-text-color;
+//           i {
+//             line-height: 35px;
+//             font-size: $base-size + 2px;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
